# cpemgr-rs

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/keystore/: release.keystore
.github/workflows/: android.yml  release.yml
docs/fiberhome/: axios.js  fiberhome-apis.md
src/: App.vue  components.d.ts  fiberhome.ts  logger.ts  main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fiberhome.rs  lib.rs  settings.rs  storage.rs
src/stores/: app.ts  connectivity.ts  devices.ts  settings.ts
src/utils/: signalGrade.ts
src/views/: AboutView.vue  DeviceDetailView.vue  HomeView.vue  NeighborSignalView.vue  ProfileView.vue  TrafficStatsView.vue
