[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.9.1"
cbc = "0.2.1"
cipher = "0.5.2"
hex = "0.4.3"
anyhow = "1.0.102"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2"
log = "0.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "cookies", "query"] }

